# PDF-to-TEXT-converter-OCR-

./: .gitignore  COMMENTS.md  DEVELOPER.md  Dockerfile  GEMINI.md  README.md  REQUIREMENTS.md  SPEC.md  developer_sys_prompt.md  docker-compose.yml  packages.txt  pyproject.toml  result.txt  reviewer_sys_promp.md  solution_architect_sys_prompt.md  system_analyst_sys_prompt.md
openspec/changes/archive/2026-03-07-ocr-pdf-converter/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-07-ocr-pdf-converter/specs/cli-interface/: spec.md
openspec/changes/archive/2026-03-07-ocr-pdf-converter/specs/ocr-engine/: spec.md
openspec/changes/archive/2026-03-07-ocr-pdf-converter/specs/pdf-processor/: spec.md
openspec/changes/archive/2026-03-07-streamlit-ocr-web-service/: design.md  proposal.md  tasks.md
openspec/changes/streamlit-ocr-web-service/specs/interactive-ocr-viewer/: spec.md
openspec/changes/streamlit-ocr-web-service/specs/multilingual-ocr-config/: spec.md
openspec/specs/interactive-ocr-viewer/: spec.md
openspec/specs/multilingual-ocr-config/: spec.md
openspec/specs/session-state-persistence/: spec.md
openspec/specs/web-ui-scaffolding/: spec.md
src/ocr_pdf_converter/: app.py  pdf_processor.py
tests/: test_app_logic.py  test_cli.py  test_cli_batch.py  test_cli_workflow.py  test_integration.py  test_mixed_batch.py  test_ocr_engine.py  test_ocr_engine_cleanup.py  test_pdf_processor.py  test_pdf_processor_images.py  test_pdf_processor_text.py  test_setup.py  test_units.py
(+2 files in other folders)
